Bug 49892 - Incorrect object placement in rtf documents
Summary: Incorrect object placement in rtf documents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:3.7.0 target:3.6.1
Keywords:
: 50231 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-14 00:52 UTC by Vladimir
Modified: 2012-12-22 11:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Crystal Reports brood (63.79 KB, application/rtf)
2012-05-14 00:52 UTC, Vladimir
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir 2012-05-14 00:52:03 UTC
Created attachment 61596 [details]
Crystal Reports brood

Since bug 47036 was closed as fixed, I will open a new one.
Once again, rtf document created with Crystal Report. Situation improved in 3.5.3, at least now objects do not miss the page they should be on. But those documents are still unusable.

1. Objects are misaligned with each other. Notably, text boxes are misaligned with graphical objects that fake "table" consists of. (there was more or less acceptable placement in LO 3.4)

2. Resaving this file as rtf results in placements changes for all text boxes and z-order mess, text boxes hide behind rectangles (in LO 3.4 placement was preserved but all graphical objects disappeared)

I've attached the problematic file.
Comment 1 s-joyemusequna 2012-05-14 04:21:31 UTC
Confirmed with LOdev 3.6 (master - 14-May-2012 02h55 x86@6-fast; Build ID: 347e345), LibO 3.4.5, and LibO 3.3.4. Tested on Windows Vista 64 and Windows XP. Resaving as RTF ruins the file.
Comment 2 Miklos Vajna 2012-08-01 18:03:02 UTC
Right, I see the problem as well. I already have a patch to fix the z-order issues, I'm looking into the additional issues with positions.
Comment 3 Not Assigned 2012-08-02 07:25:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ecda5eadaf497f8eb1ec8fb7e73c4e5e6d717da9

fdo#49892 implement RTF import of dhgt shape property
Comment 4 Not Assigned 2012-08-02 07:25:19 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2e2ca29ccc8efe1957ac770c6b818c56a37d532

fdo#49892 import RTF_SHPB{X,Y}PAGE
Comment 5 Not Assigned 2012-08-02 07:25:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=881a08079cee9363abd9c1d8e6b86465a2868a30

fdo#49892 testcase
Comment 6 Miklos Vajna 2012-08-02 07:32:08 UTC
It seems the position problem was the missing RTF_SHPB{X,Y}PAGE import, fixed in master, marking as resolved. Will request cherry-pick to -3-6 and -3-5 soon.
Comment 7 Vladimir 2012-08-02 07:37:24 UTC
Thanks! 
Will it fix resaving problem?
Comment 8 Not Assigned 2012-08-02 20:38:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5ea5a0ff387d22e10b7565eec7f0f4abc685dda7&g=libreoffice-3-6

fdo#49892 import RTF_SHPB{X,Y}PAGE


It will be available in LibreOffice 3.6.1.
Comment 9 Miklos Vajna 2012-12-22 11:11:13 UTC
*** Bug 50231 has been marked as a duplicate of this bug. ***