fdo#49892 implement RTF import of dhgt shape property

Change-Id: I36d574c5f7915d732c6c158fadb91b6032370a01